[tool.poetry]
name = "pyprojects"
version = "0.1.0"
description = ""
authors = ["restacksyj <restacksyj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
elevenlabs = "^1.12.1"
openai = "^1.54.3"
fastapi = "^0.115.4"
nest-asyncio = "^1.6.0"
pydub = "^0.25.1"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
